NO-TICKET: Fix socket url and add page title (#878)
Issue before fix:
Recently the socket urls went from /response/socket to /api/response/socket and
then back to /response/socket. Maybe a merge issue here with the respond engine
somehow not getting the final update. Also the page title was not meeting standard
spec.

What changed:
* Modified socket url to be the newly supported url
* Added title() hooks to both the incidents and incident routes.
* Fixed label in sort control
* Fixed css in sa to fix layout issue

Issue: None

Renamed alerts sort

--- a/sa/app/styles/sa/base/routes/protected/respond/_manifest.scss
+++ b/sa/app/styles/sa/base/routes/protected/respond/_manifest.scss
@@ -1,8 +1,9 @@
 @import "index";
 
-$appNavigationHeaderHeight: 40px;
+$appNavigationHeaderHeightPlusToolbar: 80px;
 
 // Respond Engine: This adjusts the layout of the page and the incidents table to account for the NW app navigation header
-.rsa-protected page.respond-engine {
-  min-height: calc(100vh - #{$appNavigationHeaderHeight});
+// and the toolbar
+.rsa-protected page.respond-engine .rsa-respond-incidents.show-more-filters .incidents-zone {
+  height: calc(100vh - #{$appNavigationHeaderHeightPlusToolbar});
 }
